# Rag-milvus

./: docker-compose.yml  original_uploaded.txt  pyproject.toml
src/project/: bulk_upload.py  checkschema.py  chunker.py  doc_reader.py  dummy.py  embedder.py  milvus.py  milvus_bilk_import.py  process_document.py  processor.py  pydantic_models.py  query_document.py  query_engine.py  schema_setup.py  sqlite_steup.py  storage_manager.py
