[project]
name = "poetry-demo-Mi"
version = "0.1.0"
description = ""
authors = [
    {name = "ayushpatravali",email = "152693986+ayushpatravali@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "weaviate-client (>=3.26.7,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "typer (>=0.16.1,<0.17.0)",
    "rich (>=14.1.0,<15.0.0)",
    "torch (==2.6.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-anthropic (>=0.3.19,<0.4.0)",
    "langchain-groq (>=0.3.7,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pymilvus (>=2.6.1,<3.0.0)",
    "langchain-milvus (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[tool.poetry.dependencies]
torch = {source = "pypi"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
